init project commit
Убрал не нужное

--- a/captchaClicker.html
+++ b/captchaClicker.html
@@ -46,20 +46,20 @@
             <button id="escapeButtonId" onclick="">Отмена</button>
         </div>
     </div>
-    <div class="paydaySettings">
+    <!-- <div class="paydaySettings">
         <p id="deleteLetters">Убр.буквы</p>
         <p id="paydaySettingsTittleId">Настройки</p>
         <p id="limit">Макс. 5</p>
         <p id="autoEnter">Авто Ent</p>
-    </div>
-    <div class="checkbox">
+    </div> -->
+    <!-- <div class="checkbox">
         <input class="custom-checkbox" type="checkbox" id="limitValueId" name="limitValueId">
         <label for="limitValueId"></label>
         <input class="custom-checkbox" type="checkbox" id="autoEnterValueId" name="autoEnterValueId">
         <label for="autoEnterValueId"></label>
         <input class="custom-checkbox" type="checkbox" id="deleteLettersValueId" name="deleteLettersValueId">
         <label for="deleteLettersValueId"></label>
-      </div>
+      </div> -->
     <div class="score">
         <p id="table">Таблица</p>
         <div class="currentScore">
