init project commit
калькулятор

--- a/captchaClicker.html
+++ b/captchaClicker.html
@@ -85,6 +85,13 @@
         </div>
     </div>
     <script src='captchaClicker.js'></script>
+    <input type="text" id="x">
+    <br>
+    <input type="text" id="y">
+    <button id="plus">+</button>
+    <button id="minus">-</button>
+    <button id="mult">*</button>
+    <button id="del">/</button>
     
 </body>
 </html>
